fix:captcha NullPointException * 在校验验证码前增加判空，解决因Session中没有captcha导致的空指针异常

--- a/office-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/office-server/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,10 @@
       "name": "jwt.secret",
       "type": "java.lang.String",
       "description": "Description for jwt.secret."
-  }
-] }
+    },
+    {
+      "name": "spring.main.allow-circular-references",
+      "type": "java.lang.String",
+      "description": "Description for spring.main.allow-circular-references."
+    }
+  ] }
