--- a/office-server/src/main/resources/config/application.properties
+++ b/office-server/src/main/resources/config/application.properties
@@ -14,13 +14,21 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
 
+#服务器地址
 spring.redis.host=127.0.0.1
+#服务器端口
 spring.redis.port=6379
-spring.redis.database=1
-spring.redis.timeout=10000s
+#数据库
+spring.redis.database=0
+#超时时间
+spring.redis.timeout=10000ms
+#最大连接数
 spring.redis.lettuce.pool.max-active=1024
+#最大等待时间
 spring.redis.lettuce.pool.max-wait=10000ms
+#最大空闲连接
 spring.redis.lettuce.pool.max-idle=200
+#最小空闲连接
 spring.redis.lettuce.pool.min-idle=5
 
 mybatis-plus.mapper-locations=classpath*:/mapper/*Mapper.xml
