add: ControllerLogAspect * 使用AOP实现controller请求日志打印 * 优化项目其他地方的日志打印 * 新增全局空指针异常捕获处理 * 优化登陆验证码的功能逻辑

--- a/office-server/pom.xml
+++ b/office-server/pom.xml
@@ -129,6 +129,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
         </dependency>
-    </dependencies>
 
+        <!-- AOP -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <!--gson-->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+        </dependency>
+
+    </dependencies>
 </project>
