--- a/office-server/src/main/resources/config/application.properties
+++ b/office-server/src/main/resources/config/application.properties
@@ -1,6 +1,5 @@
 server.port=8081
-spring.main.allow-circular-references=true
-
+# 数据库配置
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/office_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
 spring.datasource.username=root
@@ -13,7 +12,7 @@ spring.datasource.hikari.idle-timeout=180000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=30000
 spring.datasource.hikari.connection-test-query=SELECT 1
-
+# redis配置
 #服务器地址
 spring.redis.host=127.0.0.1
 #服务器端口
@@ -30,6 +29,7 @@ spring.redis.lettuce.pool.max-wait=10000ms
 spring.redis.lettuce.pool.max-idle=200
 #最小空闲连接
 spring.redis.lettuce.pool.min-idle=5
+
 
 mybatis-plus.mapper-locations=classpath*:/mapper/*Mapper.xml
 mybatis-plus.type-aliases-package=com.timberkito.server.pojo
