--- a/office-server/src/main/resources/config/application.properties
+++ b/office-server/src/main/resources/config/application.properties
@@ -1,9 +1,9 @@
-server.port=8081
+server.port=8088
 #  ˝æ›ø‚≈‰÷√
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/office_db?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=wqhWQH@123456
+spring.datasource.username=office_db
+spring.datasource.password=h2YPzsTdLzGPh8Z7
 spring.datasource.hikari.pool-name=DateHikariCP
 spring.datasource.hikari.auto-commit=true
 spring.datasource.hikari.maximum-pool-size=10
